[gd_scene load_steps=23 format=3 uid="uid://brcykac05oro1"]

[ext_resource type="Texture2D" uid="uid://bgfxeqwv2dsxm" path="res://world/player/textures/hat.png" id="1"]
[ext_resource type="Script" path="res://world/player/scripts/hat.gd" id="1_q40d8"]
[ext_resource type="AudioStream" uid="uid://1bvr1bdu3x2q" path="res://world/player/sounds/throw.mp3" id="3_jes2b"]
[ext_resource type="Texture2D" uid="uid://c4hwlu4p1npux" path="res://world/player/textures/Hat_2.png" id="3_pwgev"]
[ext_resource type="Script" path="res://world/player/scripts/Camera2D.gd" id="4_yj2r0"]
[ext_resource type="Texture2D" uid="uid://ckaogdfpd24mh" path="res://world/world/Textures/charg bar.png" id="6_1l6lq"]
[ext_resource type="Texture2D" uid="uid://dc47r3x7vh74g" path="res://world/world/Textures/charg bar medidor (force).png" id="7_1t123"]
[ext_resource type="Texture2D" uid="uid://cl7crulq77eau" path="res://world/world/Textures/charg bar medidor.png" id="7_eugj7"]
[ext_resource type="Script" path="res://ui/pause menu/Pause Menu.gd" id="9_o244d"]
[ext_resource type="Texture2D" uid="uid://h7r11lkv14su" path="res://ui/menu/textures/button_normal.png" id="10_k64a8"]
[ext_resource type="FontFile" uid="uid://celnwnqmggaub" path="res://ui/menu/DePixelKlein.otf" id="10_ss3tv"]
[ext_resource type="PackedScene" uid="uid://ce5ls7f7cvtbn" path="res://ui/menu/scenes/settings.tscn" id="11_7xqs1"]
[ext_resource type="StyleBox" uid="uid://dpx7rjh37a78k" path="res://ui/new_style_box_texture.tres" id="11_n073p"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_71un1"]
bounce = 0.7

[sub_resource type="SpriteFrames" id="1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(11, 14)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_878hj"]
texture = ExtResource("10_k64a8")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_odsh0"]
texture = ExtResource("10_k64a8")

[sub_resource type="LabelSettings" id="LabelSettings_nswls"]
font = ExtResource("10_ss3tv")
font_size = 100

[sub_resource type="Animation" id="Animation_tb6g1"]
resource_name = "Start"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.785398]
}

[sub_resource type="Animation" id="Animation_ka7js"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.785398]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7gjpv"]
_data = {
"RESET": SubResource("Animation_ka7js"),
"Start": SubResource("Animation_tb6g1")
}

[node name="Hat" type="RigidBody2D" groups=["hat"]]
z_index = 2
rotation = 0.785398
collision_layer = 4
physics_material_override = SubResource("PhysicsMaterial_71un1")
script = ExtResource("1_q40d8")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(5, 5)
sprite_frames = SubResource("1")
animation = &"Idle"

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(2, 13)
scale = Vector2(4.15789, 5)
texture = ExtResource("3_pwgev")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.28647e-05, 2.5)
rotation = 1.5708
scale = Vector2(5, 5)
shape = SubResource("2")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(416, -163)
zoom = Vector2(0.7, 0.7)
position_smoothing_enabled = true
drag_vertical_enabled = true
drag_top_margin = 1.0
drag_bottom_margin = 1.0
editor_draw_drag_margin = true
script = ExtResource("4_yj2r0")

[node name="Timer" type="Timer" parent="Camera2D"]

[node name="ThrowSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_jes2b")
bus = &"SFX"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Lifebar" type="TextureProgressBar" parent="CanvasLayer/UI"]
layout_mode = 0
offset_top = 540.0
offset_right = 180.0
offset_bottom = 660.0
scale = Vector2(2.04, 1)
max_value = 20.0
step = 0.01
value = 20.0
stretch_margin_left = 100
stretch_margin_top = 10
stretch_margin_right = 100
stretch_margin_bottom = 10
texture_under = ExtResource("6_1l6lq")
texture_progress = ExtResource("7_eugj7")

[node name="Force indicator" type="TextureProgressBar" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -79.9999
offset_right = 180.0
offset_bottom = 40.0001
grow_vertical = 0
rotation = -1.58168
min_value = 400.0
max_value = 1850.0
step = 0.01
value = 400.0
texture_under = ExtResource("6_1l6lq")
texture_progress = ExtResource("7_1t123")

[node name="Main Menu" type="Control" parent="CanvasLayer"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_o244d")

[node name="Panel" type="Panel" parent="CanvasLayer/Main Menu"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="CanvasLayer/Main Menu/Panel"]
layout_mode = 2
offset_left = 358.0
offset_top = 166.0
offset_right = 578.0
offset_bottom = 212.0
theme_override_fonts/font = ExtResource("10_ss3tv")
theme_override_styles/normal = ExtResource("11_n073p")
theme_override_styles/hover = ExtResource("11_n073p")
theme_override_styles/pressed = ExtResource("11_n073p")
text = "RESUME"
icon_alignment = 1

[node name="Button2" type="Button" parent="CanvasLayer/Main Menu/Panel"]
layout_mode = 2
offset_left = 357.0
offset_top = 216.0
offset_right = 579.0
offset_bottom = 261.0
theme_override_fonts/font = ExtResource("10_ss3tv")
theme_override_styles/normal = ExtResource("11_n073p")
theme_override_styles/hover = SubResource("StyleBoxTexture_878hj")
theme_override_styles/pressed = SubResource("StyleBoxTexture_odsh0")
text = "SETTINGS
"
icon_alignment = 1

[node name="Button3" type="Button" parent="CanvasLayer/Main Menu/Panel"]
layout_mode = 2
offset_left = 357.0
offset_top = 271.0
offset_right = 577.0
offset_bottom = 319.0
theme_override_fonts/font = ExtResource("10_ss3tv")
theme_override_styles/normal = ExtResource("11_n073p")
theme_override_styles/hover = ExtResource("11_n073p")
theme_override_styles/pressed = ExtResource("11_n073p")
text = "BACK TO MENU"
icon_alignment = 1

[node name="Button4" type="Button" parent="CanvasLayer/Main Menu/Panel"]
layout_mode = 2
offset_left = 357.0
offset_top = 330.0
offset_right = 580.0
offset_bottom = 374.0
theme_override_fonts/font = ExtResource("10_ss3tv")
theme_override_styles/normal = ExtResource("11_n073p")
theme_override_styles/hover = ExtResource("11_n073p")
theme_override_styles/pressed = ExtResource("11_n073p")
text = "EXIT"
icon_alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/Main Menu/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -335.0
offset_top = 51.0
offset_right = 335.0
offset_bottom = 154.0
grow_horizontal = 2
text = "PAUSE MENU"
label_settings = SubResource("LabelSettings_nswls")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Settings" parent="CanvasLayer/Main Menu/Panel" instance=ExtResource("11_7xqs1")]
visible = false
layout_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7gjpv")
}

[connection signal="timeout" from="Camera2D/Timer" to="Camera2D" method="_on_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/Main Menu/Panel/Button" to="CanvasLayer/Main Menu" method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Main Menu/Panel/Button2" to="CanvasLayer/Main Menu" method="_on_button_2_pressed"]
[connection signal="pressed" from="CanvasLayer/Main Menu/Panel/Button3" to="CanvasLayer/Main Menu" method="_on_button_3_pressed"]
[connection signal="pressed" from="CanvasLayer/Main Menu/Panel/Button4" to="CanvasLayer/Main Menu" method="_on_button_4_pressed"]
